# klinik-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
scripts/: build_ddinter_snapshot.py  build_prices.py  build_sgk_snapshot.py  build_titck_foreign_snapshot.py  build_titck_safety_snapshot.py  build_titck_snapshot.py  start_mcp.ps1  update_data.py
src/health_mcp/: __init__.py  __main__.py  clinical.py  foreign.py  interactions.py  prices.py  safety.py  server.py  sgk.py  titck.py
src/health_mcp/clients/: __init__.py  http.py  kubkt.py  openfda.py  pubmed.py  rxnorm.py
src/health_mcp/data/: ddinter_interactions.json  prices.json  sgk_ek4a.json  titck_drugs.json  titck_foreign.json  titck_safety.json
tests/: conftest.py  test_build_prices.py  test_clinical.py  test_discovery.py  test_foreign.py  test_helpers.py  test_http_client.py  test_interactions.py  test_kubkt.py  test_normalize.py  test_safety.py  test_scrape_regex.py
