[project]
name = "klinik-mcp"
version = "0.1.0"
description = "Klinik MCP — Türk hekim ve eczacılar için ilaç ve tıbbi bilgi MCP sunucusu (TİTCK + SGK + openFDA + NLM RxNorm)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["openpyxl>=3.1", "pytest>=8.0"]

[project.scripts]
klinik-mcp = "health_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/health_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
